Fixing jumping menu

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -55,7 +55,8 @@ header {
   	align-items: center;
   	padding: 0 16px;
   	height: 64px;
-  	}
+    border-bottom: 1px solid rgba(0,0,0,0);
+  }
 
   .active {	border-bottom: 1px solid $blue; }
 }
